<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_size_medium">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_order"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_client_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:autofillHints="name"
        android:background="@drawable/bg_custom_input"
        android:hint="@string/client_name"
        android:inputType="text"
        android:paddingStart="@dimen/margin_padding_size_medium"
        android:paddingEnd="@dimen/margin_padding_size_medium"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:gravity="center"
        android:text="@string/products"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_client_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        app:layout_constraintBottom_toTopOf="@id/tv_qtd_total_items"
        app:layout_constraintTop_toBottomOf="@id/tv_products"
        tools:listitem="@layout/layout_item_product" />

    <TextView
        android:id="@+id/tv_qtd_total_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/tv_total_value_order"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/msg_qtd_total_items" />

    <TextView
        android:id="@+id/tv_total_value_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_add_item"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/msg_value_total_order" />

    <Button
        android:id="@+id/bt_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:background="@drawable/bg_primary_button"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@id/bt_save_order" />

    <Button
        android:id="@+id/bt_save_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:background="@drawable/bg_primary_button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@id/bt_cancel_order" />

    <Button
        android:id="@+id/bt_cancel_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_secondary_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>