<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_size_medium">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:autofillHints="name"
        android:background="@drawable/bg_custom_input"
        android:hint="@string/product_name"
        android:inputType="text"
        android:paddingStart="@dimen/margin_padding_size_medium"
        android:paddingEnd="@dimen/margin_padding_size_medium"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_padding_size_micro"
        android:background="@drawable/bg_custom_input"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="@dimen/margin_padding_size_medium"
        android:paddingEnd="@dimen/margin_padding_size_medium"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_product_name" />

    <EditText
        android:id="@+id/et_value_unit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_padding_size_micro"
        android:background="@drawable/bg_custom_input"
        android:hint="@string/unit_value"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/margin_padding_size_medium"
        android:paddingEnd="@dimen/margin_padding_size_medium"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_quantity" />

    <Button
        android:id="@+id/bt_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:background="@drawable/bg_primary_button"
        android:text="@string/include"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>